RESOLVED FIXED227848
AX: Make WebKit observe spatial audio accessibility settings
https://bugs.webkit.org/show_bug.cgi?id=227848
Summary AX: Make WebKit observe spatial audio accessibility settings
chris fleizach
Reported 2021-07-09 22:50:06 PDT
Make WebKit observe spatial audio settings on Mac <rdar://problem/73590412>
Attachments
patch (3.51 KB, patch)
2021-07-09 23:11 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2021-07-09 23:11:54 PDT
EWS
Comment 2 2021-07-12 16:07:23 PDT
Committed r279855 (239609@main): <https://commits.webkit.org/239609@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433257 [details].
Myles C. Maxfield
Comment 3 2021-07-12 23:55:14 PDT
This might have broken the internal build: Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1173:27: error: unused function 'increaseContrastPreferenceKey' [-Werror,-Wunused-function] static const WTF::String& increaseContrastPreferenceKey()
chris fleizach
Comment 4 2021-07-13 00:08:47 PDT
(In reply to Myles C. Maxfield from comment #3) > This might have broken the internal build: > > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1173:27: error: unused > function 'increaseContrastPreferenceKey' [-Werror,-Wunused-function] > static const WTF::String& increaseContrastPreferenceKey() https://bugs.webkit.org/show_bug.cgi?id=227898
Truitt Savell
Comment 5 2021-07-26 17:06:06 PDT
It looks like the changes in https://trac.webkit.org/changeset/279855/webkit broke TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages on Big Sur history: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages Diff: TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:179 Value of: didChangeLanguage Actual: false Expected: true /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:180 Value of: preferenceObserverPreferenceDidChangeCalled Actual: false Expected: true /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:181 Expected equality of these values: @"en-US" Which is: "en-US" preferredLanguage() Which is: "en-GB" I am able to reproduce this with command: run-api-tests TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages I bisected this and was able to reproduce it on r279855 but no r279854
chris fleizach
Comment 6 2021-07-26 17:11:06 PDT
(In reply to Truitt Savell from comment #5) > It looks like the changes in https://trac.webkit.org/changeset/279855/webkit > > broke TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages on Big Sur > > history: > https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI. > AppleLanguagesTest.UpdateAppleLanguages > > Diff: > TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages > > > /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/ > OverrideAppleLanguagesPreference.mm:179 > Value of: didChangeLanguage > Actual: false > Expected: true > > > > /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/ > OverrideAppleLanguagesPreference.mm:180 > Value of: preferenceObserverPreferenceDidChangeCalled > Actual: false > Expected: true > > > > /Volumes/Data/worker/bigsur-release/build/Tools/TestWebKitAPI/Tests/WebKit/ > OverrideAppleLanguagesPreference.mm:181 > Expected equality of these values: > @"en-US" > Which is: "en-US" > preferredLanguage() > Which is: "en-GB" > > I am able to reproduce this with command: > run-api-tests TestWebKitAPI.AppleLanguagesTest.UpdateAppleLanguages > > I bisected this and was able to reproduce it on r279855 but no r279854 this seems strange. maybe the test is not robust enough. otherwise I don't see anything here that would affect AppleLanguages
Note You need to log in before you can comment on or make changes to this bug.