AX: Make WebKit observe spatial audio accessibility settings https://bugs.webkit.org/show_bug.cgi?id=227848

Reviewed by Sam Weinig.

Source/WebKit:

Allow mac and iOS to read from accessibility domains.
Allow mac sandbox to read from com.apple.Accessibility.

* PluginProcess/mac/com.apple.WebKit.plugin-common.sb.in:
* UIProcess/Cocoa/PreferenceObserver.mm:
(-[WKPreferenceObserver init]):

Source/WTF:

This flag was using the wrong format for a HAVE setting, so the code wasn't being compiled in.

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/239609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279855 268f45cc-cd09-0410-ab3c-d52691b4dbfc